fix alignment

--- a/client/src/app/features/employee/components/timesheet-entry/timesheet-entry.component.css
+++ b/client/src/app/features/employee/components/timesheet-entry/timesheet-entry.component.css
@@ -139,7 +139,7 @@
 }
 
 .action-btn {
-  padding: 10px 20px;
+  padding: 0px 20px 6px 8px;
   border-radius: 8px;
   font-size: 14px;
   font-weight: 500;
@@ -152,9 +152,10 @@
 }
 
 .action-btn mat-icon {
-  font-size: 18px;
-  width: 18px;
-  height: 18px;
+  font-size: 20px;
+  padding: 10px;
+  /* width: 18px; */
+  /* height: 18px; */
 }
 
 .action-btn.secondary {
